--- a/sample-config.json
+++ b/sample-config.json
@@ -4,8 +4,11 @@
   },
   "url-proxy": {
     "/l1": "http://127.0.0.1:7001",
-    "/local": "http://127.0.0.1:7001 http://127.0.0.1:7002 http://127.0.0.1:7003",
+    "/local": "http://127.0.0.1:7001 http://127.0.0.1:7002 http://127.0.0.1:7003/x",
     "/google": "http://www.google.com http://www.google.in"
+  },
+  "custom-headers": {
+    "X-Proxy-By": "WeeProxy"
   }
 }
 
