added rate-limiting and circuit-breaking via custom RoundTrip
Signed-off-by: AbhishekKr <abhikumar163@gmail.com>

--- a/sample-config.json
+++ b/sample-config.json
@@ -9,6 +9,10 @@
   },
   "custom-headers": {
     "X-Proxy-By": "WeeProxy"
+  },
+  "sanity": {
+    "max-errors-per-sec": "10",
+    "max-request-per-sec": "7000"
   }
 }
 
